--- a/sky.html
+++ b/sky.html
@@ -1,9 +1,4 @@
-
----
-layout: default
----
-
-<div> <h1>In Loving Memory of Skylar O'Tinker</h1>
-  <a href="https://youtu.be/8eV-Z-_ZPM8">Portland Memorial</a>
+<div background-color="green"> <h1 color="purple">In Loving Memory of Skylar O'Tinker</h1>
+  <a href="https://youtu.be/8eV-Z-_ZPM8" color = "pink">Portland Memorial</a>
   <a href="">Tacoma Memorial</a>
 </div>
