--- a/sky.html
+++ b/sky.html
@@ -1,4 +1,4 @@
-<div background-color="green"> <h1 color="purple">In Loving Memory of Skylar O'Tinker</h1>
-  <a href="https://youtu.be/8eV-Z-_ZPM8" color = "pink">Portland Memorial</a>
-  <a href="">Tacoma Memorial</a>
+<div style="background-color: lightblue"> <h1 color="purple">In Loving Memory of Skylar O'Tinker</h1>
+  <a href="https://youtu.be/8eV-Z-_ZPM8" style="color: pink">Portland Memorial</a>
+  <a href="" style="color: pink">Tacoma Memorial</a>
 </div>
