--- a/sky.html
+++ b/sky.html
@@ -1,4 +1,11 @@
 <div style="background-color: lightblue"> <h1 color="purple">In Loving Memory of Skylar O'Tinker</h1>
+
+  <h2>Photos</h2>
   <a href="https://youtu.be/8eV-Z-_ZPM8" style="color: pink">Portland Memorial</a>
   <a href="https://vimeo.com/1056918056/3c4a099c93?ts=0&share=copy" style="color: pink">Tacoma Memorial</a>
+
+  <h2>Sky's favorite music</h2>
+  <ul>
+    <li> <a href="https://www.youtube.com/watch?v=B1qgazBdKj8"> The long way around (replace G*** with hippies) </a></li>
+  </ul>
 </div>
