--- a/sky.html
+++ b/sky.html
@@ -6,6 +6,6 @@
 <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1056918056?h=3c4a099c93&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Sky memorial slideshow tacoma low res"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   <h2>Sky's favorite music</h2>
   <ul>
-    <li> <a href="https://www.youtube.com/watch?v=B1qgazBdKj8"> The long way around (replace G*** with hippies) </a></li>
+    <li> <a href="https://www.youtube.com/watch?v=B1qgazBdKj8"> The long way around (use hippies in place of other words) </a></li>
   </ul>
 </div>
