--- a/sky.html
+++ b/sky.html
@@ -1,4 +1,4 @@
-<div style="padding: 50px; background-color: lightblue"> <h1 style="color: purple">In Loving Memory of Skylar O'Tinker</h1>
+<div style="padding: 50px; background-color: lightblue"> <h1>In Loving Memory of Skylar O'Tinker (1990 - 2024) </h1>
 
   <h2>Photos</h2>
   <a href="https://youtu.be/8eV-Z-_ZPM8" style="color: pink">Portland Memorial</a>
