--- a/sky.html
+++ b/sky.html
@@ -4,8 +4,9 @@
   <a href="https://youtu.be/8eV-Z-_ZPM8" style="color: pink">Portland Memorial</a>
   <a href="https://vimeo.com/1056918056/3c4a099c93?ts=0&share=copy" style="color: pink">Tacoma Memorial</a>
   <br/>
-  <iframe height="auto" width="600" src="https://youtube.com/embed/8eV-Z-_ZPM8"></iframe>
-
+  <div style="width: 600px" >
+  <iframe src="https://youtube.com/embed/8eV-Z-_ZPM8"></iframe>
+  </div>
 <div style="width: 600px; padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1056918056?h=3c4a099c93&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Sky memorial slideshow tacoma low res"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   <h2>Sky's favorite music</h2>
   <ul>
