--- a/sky.html
+++ b/sky.html
@@ -4,10 +4,10 @@
   <a href="https://youtu.be/8eV-Z-_ZPM8" style="color: pink">Portland Memorial</a>
   <a href="https://vimeo.com/1056918056/3c4a099c93?ts=0&share=copy" style="color: pink">Tacoma Memorial</a>
   <br/>
-  <div style="width: 600px;">
+  <div style="width: 40%; margin-top: 30px; margin-left: 30px">
   <iframe src="https://youtube.com/embed/8eV-Z-_ZPM8"></iframe>
   </div>
-<div style="width: 600px;"><iframe src="https://player.vimeo.com/video/1056918056?h=3c4a099c93&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" ></iframe></div>
+<div style="width: 40%; margin: 30px"><iframe src="https://player.vimeo.com/video/1056918056?h=3c4a099c93&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" ></iframe></div>
   <h2>Sky's favorite music</h2>
   <ul>
     <li> <a href="https://www.youtube.com/watch?v=B1qgazBdKj8"> The long way around (use hippies in place of other words) </a></li>
