--- a/sky.html
+++ b/sky.html
@@ -7,7 +7,12 @@
   <iframe frameborder="0" style="margin: 40px; position:relative;width:80%; height: 80%;" src="https://youtube.com/embed/8eV-Z-_ZPM8"></iframe>
   <br/>
 <iframe src="https://player.vimeo.com/video/1056918056?h=3c4a099c93&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="margin: 40px; position:relative;width:80%;height:80%;" title="Sky memorial slideshow tacoma low res"></iframe><script src="https://player.vimeo.com/api/player.js"></script>  <h2>Sky's favorite music</h2>
+ <h2>Music</h2>
   <ul>
     <li> <a href="https://www.youtube.com/watch?v=B1qgazBdKj8"> The long way around (use hippies in place of other words) </a></li>
   </ul>
+  <h2>Events</h2>
+  <img src="images/Buckleberry Farm's Queered up Art Harvest and Gayla.PNG">
+  <img src="images/Gradient Rainbow Pride MOnth Celebration Prde Flyer.jpg.jpeg">
+  <image src="images/sky_memor.jpg">
 </div>
