--- a/sky.html
+++ b/sky.html
@@ -12,7 +12,7 @@
     <li> <a href="https://www.youtube.com/watch?v=B1qgazBdKj8"> The long way around (use hippies in place of other words) </a></li>
   </ul>
   <h2>Events</h2>
-  <img src="images/Buckleberry Farm's Queered up Art Harvest and Gayla.PNG">
-  <img src="images/Gradient Rainbow Pride MOnth Celebration Prde Flyer.jpg.jpeg">
+  <img src="images/birthday.png">
+  <img src="images/memorial_tacoma.jpg">
   <image src="images/sky_memor.jpg">
 </div>
